# VST3_ChromaSDKPlugin

./: .gitignore  CMakeLists.txt
resource/: Info.plist  myplugineditor.uidesc
source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
source/Razer/: ChromaAnimationAPI.h
